...

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_first_name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
...

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_last_name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
...
                    android:text="@string/screen_name_view_statistics"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:onClick="viewStatistics"/>

                <Button
                    android:id="@+id/button_save"
                    style="?android:textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_save"
                    android:textStyle="bold"
                    android:layout_weight="1"
...
